--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/src/index.css" />
     <title>Meme Generator</title>
   </head>
   <body>
